add email functionality

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <nav class="navbar">
             <div class="container">
                 <a href="#home" class="logo">
-                    <img src="images/logo.png" alt="कोकण रेल्वे" class="logo-image">
+                    <img src="images/logo/logo.png" alt="कोकण रेल्वे" style="height: 50px; width: auto;">
+
                 </a>
                 <div class="nav-links">
                     <a href="#home">मुखपृष्ठ</a>
@@ -99,7 +100,7 @@
                <!-- First Responsive Div -->
     <div class="responsive-container">
         <div class="logo">
-            <img src="images/logo.png" alt="Logo"> <!-- Replace with actual logo URL -->
+            <img src="images/logo/logo.png" alt="Logo"> <!-- Replace with actual logo URL -->
         </div>
         <div class="content">
             <h2>एक मेल ..हक्काच्या रेल्वे टर्मिनस साठी ..!!</h2>
@@ -113,7 +114,7 @@
     <!-- Second Responsive Div -->
     <div class="responsive-container">
         <div class="logo">
-            <img src="images/extra-logo.png" alt="Logo"> <!-- Replace with actual logo URL -->
+            <img src="images/logo/extra-logo.png" alt="Logo"> <!-- Replace with actual logo URL -->
         </div>
         <div>
             <h2 >रत्नागिरी सिंधुदुर्ग रहिवाशी मंडळ</h2>
@@ -142,17 +143,17 @@
                 <h2>आमचे प्रतिनिधी</h2>
                 <div class="representative-grid">
                     <div class="representative-card">
-                        <img src="images/logo.png" alt="प्रतिनिधी नाव" class="representative-image">
+                        <img src="images/representative/representative.png" alt="प्रतिनिधी नाव" class="representative-image">
                         <h3>ॲड. संदीप निंबाळकर</h3>
                         <p>कोकण रेल्वे संदर्भातील भूमिका आणि माहिती.</p>
                     </div>
                     <div class="representative-card">
-                        <img src="images/logo.png" alt="प्रतिनिधी नाव" class="representative-image">
+                        <img src="images/representative/representative.png" alt="प्रतिनिधी नाव" class="representative-image">
                         <h3>मिहिर मठकर </h3>
                         <p>कोकण रेल्वे संदर्भातील भूमिका आणि माहिती.</p>
                     </div>
                     <div class="representative-card">
-                        <img src="images/logo.png" alt="प्रतिनिधी नाव" class="representative-image">
+                        <img src="images/representative/representative.png" alt="प्रतिनिधी नाव" class="representative-image">
                         <h3>प्रतिनिधी नाव</h3>
                         <p>कोकण रेल्वे संदर्भातील भूमिका आणि माहिती.</p>
                     </div>
