improve ui and add functionality to contact us section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+    <link rel="preload" href="images/banner/ban1.jpg" as="image">
 
     <!-- Google tag (gtag.js) -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRLV54MYW"></script>
@@ -199,7 +200,7 @@
 
                 <h2>समाचार</h2>
                 <div class="news-grid" id="news-grid">
-                    
+
                 </div>
             </div>
         </section>
@@ -225,7 +226,7 @@
         <section id="contact" class="contact-section">
             <div class="container">
                 <h2>संपर्क साधा</h2>
-                <form class="contact-form">
+                <form class="contact-form" action="https://formspree.io/f/mpwalayj" method="POST">
                     <input type="text" name="name" placeholder="आपले नाव" required>
                     <input type="email" name="email" placeholder="आपला ईमेल" required>
                     <textarea name="message" placeholder="आपला संदेश" required></textarea>
@@ -233,6 +234,7 @@
                 </form>
             </div>
         </section>
+        
     </main>
 
     <!-- Footer -->
