add google analytics and google adsense

--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
     <link rel="preload" href="images/banner/ban1.jpg" as="image">
 
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRLV54MYW"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRLV54MYW"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-5FRLV54MYW');
-    </script> -->
-    <!--  unknown -->
-    <!--
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6849009576420641"
-     crossorigin="anonymous"></script> -->
+    </script> 
+    <!--  google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-6849009576420641">
 
 </head>
 
@@ -225,13 +223,13 @@
     <!-- Footer -->
     <footer class="footer-section">
         <div class="footer-content">
-            
             <div class="social-links">
                 <a href="https://www.facebook.com/swvterminus" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <!-- <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a> -->
                 <a href="https://www.instagram.com/sawantwadi_terminus_" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://whatsapp.com/channel/0029VaNcJO2AzNbqM1U2T41R" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://youtube.com/@swaditerminus?si=oP2QRBcA_vbBWKzv" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
             </div>
+            
             <a href="mailto:swaditerminus@gmail.com" class="footer-email">swaditerminus@gmail.com</a>
 
             <p>&copy; 2024 कोकण रेल्वे प्रवासी संघटना. सर्व हक्क राखीव.</p>
