some minor errors in content

--- a/index.html
+++ b/index.html
@@ -108,13 +108,14 @@
                 रेल्वे टर्मिनसचा..!!  
                 तो ही प्रजासत्ताक दिनी..!!!</b></p>
                 <p>
-                    कोकण रेल्वे प्रवासी संघटनेच्या सलग्न संघटनांकडून संगमेश्वर आणि सावंतवाडी येथे आयोजन.
+                    अखंड कोकण रेल्वे प्रवासी सेवा समिती सलग्न संघटनांकडून
+ संगमेश्वर आणि सावंतवाडी येथे आयोजन.
                     <br>
                     येणाऱ्या प्रजासत्ताक दिनी कोकणवासिय आपल्यावर होत असणाऱ्या अन्यायाला वाचा फोडणार आहेत. 
                     वास्तविक बघता कोकणा सारखा निसर्गरम्य परिसर, इथले समुद्र किनारे, येथील धार्मिक स्थळे ही देशात प्रसिद्ध आहे, त्यातच कोकणातील सिंधुदुर्ग जिल्हा हा पर्यटन जिल्हा. पण इथले पर्यटन बहरावे असे राज्यकर्त्यांना वाटत नसावे कारण पर्यटनाचा मुख्य गाभा हा दळणवळण आहे. त्यात रेल्वे ही कोकणातील दळणवळणाची मुख्य साधन आहे.
                     <br>
                     सध्याची वास्तवता बघता, कोकण रेल्वे महामंडळ हे भारतीय रेल्वेचा भाग नसल्याने कोकणवासियांना त्याचा त्रास अधिकाधिक जाणवत आहे. कोकण रेल्वेच्या एकेरी मार्गामुळे गाड्या चालवण्याचा क्षमतेवर नक्कीच बंधने आहेत. फक्त कोकणापुरती गाड्या चालवणे हे ही कोकणवासियांची मागणी गेली अनेक वर्षे परिपूर्ण टर्मिनस अभावी पूर्ण करण्यात आली नाही.
-                    त्यामुळे कोकण रेल्वे प्रवासी संघटना तर्फे कोकण रेल्वेचे विलीनीकरण, दुहेरीकरण, आणि परिपूर्ण सावंतवाडी टर्मिनससाठी घंटानाद आंदोलन सावंतवाडी रेल्वे स्थानकात करण्यात येत आहे.
+                    त्यामुळे कोकण रेल्वे प्रवासी संघटना तर्फे कोकण रेल्वेचे विलीनीकरण, दुहेरीकरण, आणि परिपूर्ण सावंतवाडी टर्मिनससाठी रेल रोको आंदोलन सावंतवाडी रेल्वे स्थानकात करण्यात येत आहे.
                 </p>
                 <p>
                     <b>पुन्हा एकदा हर घर टर्मिनस मेल मोहीम..!!</b>
@@ -229,8 +230,12 @@
 
     <!-- JavaScript for Mobile Menu Toggle -->
     <script src="script.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <!-- supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
 
 </body>
 
