--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <img src="images/logo/logo11.png" alt="Logo"> 
             </div>
             <div class="content">
-                <h2>कोकण रेल्वे प्रवासी संघटना</h2>
+                <h2>कोकण रेल्वे प्रवासी संघटना, सावंतवाडी.</h2>
                 <p style="text-align: center;"><b>कोकणवासियांचा जनआक्रोश..!  
                 रेल्वे टर्मिनसचा..!!  
                 तो ही प्रजासत्ताक दिनी..!!!</b></p>
